--- a/styles/style.css
+++ b/styles/style.css
@@ -1,14 +1,53 @@
+@import url('https://fonts.googleapis.com/css2?family=Croissant+One&family=Montserrat&display=swap');
+
+
 #content {
     max-width: 1600px;
     margin: 0 auto;
 } 
+.home-grid{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+}
+nav {
+    display: flex;
+    justify-content: space-around;
+}
+#hero {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    margin-top: -100px;
+}
+#hero-box {
+    grid-column: 1/4;
+    grid-row: 1/3;
+    z-index: -1;
+}
 nav a {
     text-align: center;
     color: #969A96;
     text-decoration: none;
+    font-family: "Croissant One", Arial, sans-serif;
+    padding: 35px;
 }
-#hero-msg h1, #hero-msg h4 {
+nav a:hover {
+    background-color: #2f3061;
+    font-family: "Croissant One", Arial, sans-serif;
+}
+#hero-msg {
+    grid-column: 2/3;
+    grid-row: 1/3;
+    margin-top: 100px;
+}
+#hero-msg h1 {
     text-align: center;
+    font-family: "Croissant One", Arial, sans-serif;
+    color: #f7fff7;
+}
+#hero-msg h4 {
+    text-align: center;
+    font-family: "Croissant One", Arial, sans-serif;
+    color: #f7fff7;
 }
 .button-box {
     text-align: center;
@@ -16,78 +55,197 @@ nav a {
 main section {
     text-align: center;
 }
+main section img {
+    box-sizing: border-box;
+}
 #background {
     height: 725px;
     text-align: center;
+    grid-column: 1/11;
+    grid-row: 4/9;
 }
-#hero-img .logo {
+#hero-img {
     width: 100%;
 }
-.icon, .logo {
+.icon {
+    width: 80px;
+    padding-top: 10px;
+}
+.logo {
     width: 80px;
 }
 .center {
     text-align: center; 
 }
-
-
-
+#logo_link {
+    padding-top: 5px;
+    justify-self: center;
+    align-self: center;
+}
 
 body {
     background-color: #969A96;
+    font-family: "Montserrat", Arial, sans-serif;
+    font-size: 22px;
+    margin: 0;
+    padding: 0;
+}
+h2 {
+    margin: 0;
 }
 header {
     background-color: #343434;
-}
-nav a:hover {
-    background-color: #2f3061;
-}
-.book, .join {
-    background-color: #6ca6c1;
-    text-decoration: none;
+    display: grid;
+    grid-template-columns: 150px auto;
 }
 #background {
     background-color: #f7fff7;
 }
 .msg {
     background-color: #656765 ;
+    line-height: 1.5em;
+    padding: 35px;
+    grid-column: 6/10;
+    grid-row: 6/7;
+    box-shadow: 5px 5px 10px #6f7364;
 }
 footer {
     background-color: #475d85 ;
+    color:#000000;
+    padding: 25px 50px;
+    margin-top: 200px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 nav a:hover {
     color: #f7fff7;
 }
 .home-title {
-    color: #343434
+    color: #343434;
+    font-family: "Montserrat", Arial, sans-serif;
+    font-size: 2em;
+    margin-top: 10px;
 }
 h4 {
     color: #343434;
 }
 .book, .join {
-    color: #343434;
+    background-color: #6ca6c1;
+    text-decoration: none;
+    font-family: "Croissant One", Arial, sans-serif;
+    font-size: 18px;
+    padding: 15px 30px;
+    margin-top: 50px;
+    border-radius: 5px;
 }
 .book:hover, .join:hover {
-    color: #7fffd4
+    color: #7fffd4;
+    font-family: "Croissant One", Arial, sans-serif;
+    text-decoration: none;
 }
 .msg h2 {
     color: #343434;
     text-align: center;
+    font-family: "Montserrat", Arial, sans-serif;
 }
 .msg p {
     color: black;
     text-align: center;
-}
-footer {
-    color:#000000;
+    font-family: "Croissant One", Arial, sans-serif;
+    font-size: .8em;
+    padding-bottom: 15px;
 }
 footer a {
     color: #000000;
     text-decoration: none;
+    font-family: "Croissant One", Arial, sans-serif;
 }
 footer a:hover {
-    color: #7fffd4
+    text-decoration: none;
+    color: #7fffd4;
+    font-family: "Croissant One", Arial, sans-serif;
 }
-footer p a:hover {
-    text-decoration: underline;
+footer p {
+    text-decoration: none;
+    color: #000000;
+    font-family: "Croissant One", Arial, sans-serif;
 }
+footer .social img {
+    padding-top: 15px;
+}
+.rivers-card {
+    margin: 200px 0;
+    grid-column: 2/4;
+    grid-row: 2/3;
+}
+.camping-card {
+    margin: 200px 0;
+    grid-column: 5/7;
+    grid-row: 2/3;
+}
+.rapids-card {
+    margin: 200px 0;
+    grid-column: 8/10;
+    grid-row: 2/3;
+}
+.card-img {
+    width: 100%;
+    border: 10px solid black;
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+.card-img:hover {
+    opacity: .6;
+    transform: scale(1.1);
+}
+.mountains {
+    width: 100%;
+    grid-column: 2/7;
+    grid-row: 5/8;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+
+@media screen and (max-width: 900px) {
+    #hero, .home-grid {
+        display: block;
+        height: auto;
+    }
+    nav, footer {
+        flex-direction: column;
+        
+    }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
+    #hero {
+        margin-top: 0;
+    }
+    #hero-msg {
+        margin-top: 0;
+    }
+    #hero-msg h4 {
+        display: none;
+    }
+    .home-title {
+        font-size: 25px;
+        color: #6f7364;
+    }
+    .rivers-card, .camping-card, .rapids-card { 
+        margin: 50px auto;
+        width: 60%;
+    }
+    #background {
+        display: none;
+    }
+    .mountains, .msg {
+        width: 80%;
+        display: block;
+        margin: 0 auto;
+    }
+    footer {
+        margin-top: 25px;
+    }
+}
+            
