modified:   events.html 	new file:   images/Raftingimage1.jpg 	new file:   images/extremerafting.jpg 	new file:   images/familyrafting.jpg 	new file:   images/rsz_1extremerafting.jpg 	new file:   images/rsz_1raftingimage1.jpg 	modified:   index.html 	modified:   styles/style.css

--- a/styles/style.css
+++ b/styles/style.css
@@ -15,15 +15,76 @@
 #events-msg h4 {
     font-size: 30px;
     color: #f7fff7;
+    font-family: "Croissant One", Arial, sans-serif;
 }
-#events-grid {
+#events-msg h1 {
+    font-family: "Croissant One", Arial, sans-serif;
+    font-size: 50px;
+}
+.events-grid {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr ;
-    grid-template-rows: 20% 20% 20% 20% 20%;
+    grid-template-columns:50px 1fr 1fr 1fr 1fr 50px;
+    grid-template-rows: 50px 1fr 1fr 1fr;
 }
-#events-grid t1 {
+.thrill-card h1{
+    font-family: "Croissant One", Arial, sans-serif;
+    font-size: 30px;
+}
+.thrill-card h2 {
+    text-align: left;
+    font-family: "Montserrat", Arial, sans-serif;
+    color: #343434;
+    font-size: 20px;
+}
+.thrill-card {
+    grid-column: 4/6;
+    grid-row: 2/3;
+    text-align: left;
+}
+.thrill-pic {
     grid-column: 2/3;
-    grid-row: 3/4
+    grid-row: 2/3;
+    font-size: 30px;
+    margin-top: 50px;
+}
+
+.family-card h1 {
+    font-family: "Croissant One", Arial, sans-serif;
+    font-size: 30px;
+}
+.family-card h2 {
+    text-align: left;
+    font-family: "Montserrat", Arial, sans-serif;
+    color: #343434;
+    font-size: 20px;
+}
+.family-card {
+    grid-column: 4/6;
+    grid-row: 3/4;
+}
+.family-pic {
+    grid-column: 2/3;
+    grid-row: 3/4;
+    margin-top: 50px;
+}
+.extreme-card h1 {
+    font-family: "Croissant One", Arial, sans-serif;
+    font-size: 30px;
+}
+.extreme-card h2 {
+    text-align: left;
+    font-family: "Montserrat", Arial, sans-serif;
+    color: #343434;
+    font-size: 20px;
+}
+.extreme-card {
+    grid-column: 4/6;
+    grid-row: 4/5;
+}
+.extreme-pic {
+    grid-column: 2/3;
+    grid-row: 4/5;
+    margin-top: 50px;
 }
 
 nav {
